--- a/style.css
+++ b/style.css
@@ -105,6 +105,16 @@ hr {
   text-align: center;
 }
 
+.attribution {
+   font-size: 16px;
+   text-align: center;
+}
+ .attribution a {
+   color: #fff;
+   text-decoration: none;
+}
+
+
 @media (max-width:375px) {
   .imageTop {
     position: absolute;
